change title of html file

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Simple Live Life</title>
+	<title>Simple Live </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
